hero-image overflow hidden bug fixed

--- a/src/assets/css/Main.css
+++ b/src/assets/css/Main.css
@@ -147,6 +147,10 @@
   align-items: center;
 }
 
+.hero-top-wrapper {
+  position: relative;
+}
+
 .hero-image-wrapper {
   position: relative;
   overflow: hidden;
